--- a/client/src/app/layouts/main-layout/home/home.component.css
+++ b/client/src/app/layouts/main-layout/home/home.component.css
@@ -19,7 +19,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: radial-gradient(
+  background:
+    radial-gradient(
       circle at 20% 80%,
       rgba(255, 255, 255, 0.1) 0%,
       transparent 50%
@@ -405,6 +406,11 @@
   .featuredTitle,
   .chooseUsTitle {
     font-size: 1.75rem;
+  }
+  .view-details-btn {
+    padding: 0.5rem 1.5rem;
+    width: auto;
+    font-size: 0.8rem;
   }
 }
 
